--- a/image_quality_evaluation/static/css/style.css
+++ b/image_quality_evaluation/static/css/style.css
@@ -104,12 +104,15 @@ h1{
 	text-align: center;
 	width: 100%;
 	color: #000000;
+	background-color: transparent;
+	border: none;
 }
 .button{
 	background-color: #ffffff;
 	padding: 5px 15px;
 	cursor: pointer;
 	border-radius: 5px;
+	border: none;
 	text-decoration: none;
 	color: #000000;
 }
